fixed petals not showing on chrome

--- a/processed.css
+++ b/processed.css
@@ -83,44 +83,23 @@ p:first-child {
 #experience .exp:nth-child(1) header {
   border-left: solid 51px #F94144;
 }
-#experience .exp:nth-child(1) ::marker {
-  color: #F94144;
-}
 #experience .exp:nth-child(2) header {
   border-left: solid 51px #F3722C;
-}
-#experience .exp:nth-child(2) ::marker {
-  color: #F3722C;
 }
 #experience .exp:nth-child(3) header {
   border-left: solid 51px #F8961E;
 }
-#experience .exp:nth-child(3) ::marker {
-  color: #F8961E;
-}
 #experience .exp:nth-child(4) header {
   border-left: solid 51px #F9C74F;
-}
-#experience .exp:nth-child(4) ::marker {
-  color: #F9C74F;
 }
 #experience .exp:nth-child(5) header {
   border-left: solid 51px #90BE6D;
 }
-#experience .exp:nth-child(5) ::marker {
-  color: #90BE6D;
-}
 #experience .exp:nth-child(6) header {
   border-left: solid 51px #43AA8B;
 }
-#experience .exp:nth-child(6) ::marker {
-  color: #43AA8B;
-}
 #experience .exp:nth-child(7) header {
   border-left: solid 51px #577590;
-}
-#experience .exp:nth-child(7) ::marker {
-  color: #577590;
 }
 #experience .exp header {
   padding-left: 16px;
@@ -168,7 +147,7 @@ p:first-child {
 .two {
   animation-name: blossom-1;
   animation-duration: 2s;
-  animation-delay: 1.05s;
+  animation-delay: 0.9s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -184,7 +163,7 @@ p:first-child {
 .three {
   animation-name: blossom-2;
   animation-duration: 2s;
-  animation-delay: 0.9s;
+  animation-delay: 0.75s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -200,7 +179,7 @@ p:first-child {
 .four {
   animation-name: blossom-3;
   animation-duration: 2s;
-  animation-delay: 0.75s;
+  animation-delay: 0.6s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -216,7 +195,7 @@ p:first-child {
 .five {
   animation-name: blossom-4;
   animation-duration: 2s;
-  animation-delay: 0.6s;
+  animation-delay: 0.45s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -232,7 +211,7 @@ p:first-child {
 .six {
   animation-name: blossom-5;
   animation-duration: 2s;
-  animation-delay: 0.45s;
+  animation-delay: 0.3s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -248,7 +227,7 @@ p:first-child {
 .seven {
   animation-name: blossom-6;
   animation-duration: 2s;
-  animation-delay: 0.3s;
+  animation-delay: 0.15s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
@@ -264,7 +243,7 @@ p:first-child {
 .eight {
   animation-name: blossom-7;
   animation-duration: 2s;
-  animation-delay: 0.15s;
+  animation-delay: 0s;
   animation-timing-function: cubic-bezier(0.39, 1.77, 0.64, 1);
   animation-fill-mode: forwards;
 }
